a little change in css

--- a/src/components/layouts/header.css
+++ b/src/components/layouts/header.css
@@ -35,31 +35,31 @@ svg {
     stroke-dasharray: 6% 29%;
     stroke-width: 5px;
     stroke-dashoffset: 0%;
-    animation: stroke-offset 5.5s infinite linear;
+    animation: stroke-offset 6s infinite linear;
 }
 
 .text-copy:nth-child(1){
-	stroke: #4D163D;
+	stroke: #1f164d;
 	animation-delay: -1;
 }
 
 .text-copy:nth-child(2){
-	stroke: #840037;
+	stroke: #000b84;
 	animation-delay: -2s;
 }
 
 .text-copy:nth-child(3){
-	stroke: #BD0034;
+	stroke: #0029bd;
 	animation-delay: -3s;
 }
 
 .text-copy:nth-child(4){
-	stroke: #BD0034;
+	stroke: #0068bd;
 	animation-delay: -4s;
 }
 
 .text-copy:nth-child(5){
-	stroke: #FDB731;
+	stroke: #31fdef;
 	animation-delay: -5s;
 }
 
